@@ -2,7 +2,7 @@
 #
 # pre-inst-env gnucobol
 #
-# Copyright (C) 2017,2019-2020 Free Software Foundation, Inc.
+# Copyright (C) 2017,2019-2020,2023 Free Software Foundation, Inc.
 # Written by Mathieu Lirzin, Simon Sobisch
 #
 # This file is part of GnuCOBOL.
@@ -53,6 +53,13 @@ export COB_CFLAGS COB_LDFLAGS COB_LIBS
 export COB_CONFIG_DIR COB_COPY_DIR
 export LD_LIBRARY_PATH DYLD_LIBRARY_PATH SHLIB_PATH LIBPATH
 export COB_LIBRARY_PATH
+
+# ensure we don't execute windows paths within programs generated by cygwin
+# by passing a hint
+if test "$OSTYPE" == "cygwin"; then
+   COB_ON_CYGWIN=1
+   export COB_ON_CYGWIN
+fi
 
 # not robust check, but better than none
 if test "x${BASH_SOURCE}" != "x" -a "${BASH_SOURCE}" != "$0"; then
