@@ -1,7 +1,7 @@
 #
 # atlocal gnucobol/tests
 #
-# Copyright (C) 2003-2012, 2014-2022 Free Software Foundation, Inc.
+# Copyright (C) 2003-2012, 2014-2023 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart
 #
 # This file is part of GnuCOBOL.
@@ -115,7 +115,7 @@ UNIFY_LISTING="${abs_srcdir}/listings-sed.sh"
 # test runner for manual tests, content may be adjusted by the user
 RUN_PROG_MANUAL="${abs_builddir}/run_prog_manual.sh"
 
-# unset option if not internally set in this script
+# unset option if not internally set in this script - or external
 _unset_option () {
 	if test "$1" != "COB_CONFIG_DIR" \
 	     -a "$1" != "COB_COPY_DIR" \
@@ -123,7 +123,8 @@ _unset_option () {
 	     -a "$1" != "COB_LIBRARY_PATH" \
 	     -a "$1" != "COB_CFLAGS" \
 	     -a "$1" != "COB_LIBS" \
-	     -a "$1" != "COB_UNIX_LF"; then
+	     -a "$1" != "COB_UNIX_LF" \
+	     -a "$1" != "OS"; then
 		unset $1
 	fi
 }
@@ -135,6 +136,13 @@ _return_path () {
 	echo "$1"
 }
 
+# ensure we don't execute windows paths within programs generated by cygwin
+# by passing a hint
+if test "$OSTYPE" == "cygwin"; then
+   COB_ON_CYGWIN=1
+   export COB_ON_CYGWIN
+fi
+
 # Fix for testcases where cobc translates path to win32 equivalents
 if test "x$MSYSTEM" != "x"; then
 	PATHSEP=";"
@@ -145,7 +153,7 @@ if test "x$MSYSTEM" != "x"; then
 	# the Win32 variant when starting the cobc process)
 	COBCRUN=${ABS_COBCRUN}
 else
-	PATHSEP='@PATH_SEPARATOR@';
+	PATHSEP='@PATH_SEPARATOR@'
 fi
 export PATHSEP
 
