@@ -4,7 +4,7 @@
 # This script is a special variant of the atlocal script for testing
 # with Valgrind.
 #
-# Copyright (C) 2003-2012, 2014-2022 Free Software Foundation, Inc.
+# Copyright (C) 2003-2012, 2014-2023 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart
 #
 # This file is part of GnuCOBOL.
@@ -123,7 +123,7 @@ UNIFY_LISTING="${abs_srcdir}/listings-sed.sh"
 # test runner for manual tests, content may be adjusted by the user
 RUN_PROG_MANUAL="${abs_builddir}/run_prog_manual.sh"
 
-# unset option if not internally set in this script
+# unset option if not internally set in this script - or external
 _unset_option () {
 	if test "$1" != "COB_CONFIG_DIR" \
 	     -a "$1" != "COB_COPY_DIR" \
@@ -131,7 +131,8 @@ _unset_option () {
 	     -a "$1" != "COB_LIBRARY_PATH" \
 	     -a "$1" != "COB_CFLAGS" \
 	     -a "$1" != "COB_LIBS" \
-	     -a "$1" != "COB_UNIX_LF"; then
+	     -a "$1" != "COB_UNIX_LF" \
+	     -a "$1" != "OS"; then
 		unset $1
 	fi
 }
@@ -143,13 +144,12 @@ _return_path () {
 	echo "$1"
 }
 
-# Fix for testcases where cobc translates path to win32 equivalents
-if test "x$MSYSTEM" != "x"; then
-	PATHSEP=";"
-else
-	PATHSEP='@PATH_SEPARATOR@';
-fi
-export PATHSEP
+# Note: we explicit do not set COB_ON_CYGWIN here,
+# as this is file is about running non-cygwin binaries
+
+# Note: we explicit do not handle PATHSEP here,
+# as this is file is about running non-windows binaries
+PATHSEP='@PATH_SEPARATOR@'
 
 # entries likely referenced in the LIBS entries below
 prefix="@prefix@"
