@@ -5,7 +5,7 @@
 # a not POSIX build (OrangeC or Visual Studio build for example)
 # in a POSIX environment (like MinGW or Cygwin, possibly WSL).
 #
-# Copyright (C) 2003-2012, 2014-2022 Free Software Foundation, Inc.
+# Copyright (C) 2003-2012, 2014-2023 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart
 #
 # This file is part of GnuCOBOL.
@@ -60,7 +60,7 @@ UNIFY_LISTING="${abs_srcdir}/listings-sed.sh"
 # test runner for manual tests, content may be adjusted by the user
 RUN_PROG_MANUAL="${abs_builddir}/run_prog_manual.sh"
 
-# unset option if not internally set in this script
+# unset option if not internally set in this script - or external
 _unset_option () {
 	if test "$1" != "COB_CONFIG_DIR" \
 	     -a "$1" != "COB_COPY_DIR" \
@@ -68,7 +68,8 @@ _unset_option () {
 	     -a "$1" != "COB_LIBRARY_PATH" \
 	     -a "$1" != "COB_CFLAGS" \
 	     -a "$1" != "COB_LIBS" \
-	     -a "$1" != "COB_UNIX_LF"; then
+	     -a "$1" != "COB_UNIX_LF" \
+	     -a "$1" != "OS"; then
 		unset $1
 	fi
 }
@@ -90,6 +91,9 @@ _return_path () {
 		fi
 	fi
 }
+
+# Note: we explicit do not set COB_ON_CYGWIN here,
+# as this is file is about running non-cygwin binaries
 
 # Fix for testcases where cobc uses win32 paths internally
 PATHSEP=";"
