@@ -1,4 +1,4 @@
-## Copyright (C) 2003-2012, 2014-2022 Free Software Foundation, Inc.
+## Copyright (C) 2003-2012, 2014-2023 Free Software Foundation, Inc.
 ## Written by Keisuke Nishida, Roger While, Simon Sobisch, Ron Norman,
 ## Brian Tiffin, Joe Robbins, Edward Hart
 ##
@@ -5292,7 +5292,9 @@ AT_DATA([prog1.cob], [
            open output file1.
            close file1.
            open input file1.
-           accept os-check from environment "OS".
+           accept os-check from environment "COB_ON_CYGWIN".
+           if os-check = spaces
+             accept os-check from environment "OS".
            if os-check = spaces
              accept os-check from environment "OS_NAME".
            inspect os-check converting "werfdosin" to "WERFDOSIN".
@@ -5358,7 +5360,9 @@ AT_DATA([prog1.cob], [
            open output file1.
            close file1.
            open input file1 with lock.
-           accept os-check from environment "OS".
+           accept os-check from environment "COB_ON_CYGWIN".
+           if os-check = spaces
+             accept os-check from environment "OS".
            if os-check = spaces
              accept os-check from environment "OS_NAME".
            inspect os-check converting "werfdosin" to "WERFDOSIN".
@@ -5426,7 +5430,9 @@ AT_DATA([prog1.cob], [
            open output file1.
            close file1.
            open input file1.
-           accept os-check from environment "OS".
+           accept os-check from environment "COB_ON_CYGWIN".
+           if os-check = spaces
+             accept os-check from environment "OS".
            if os-check = spaces
              accept os-check from environment "OS_NAME".
            inspect os-check converting "werfdosin" to "WERFDOSIN".
@@ -5492,7 +5498,9 @@ AT_DATA([prog1.cob], [
            open output file1.
            close file1.
            open input file1.
-           accept os-check from environment "OS".
+           accept os-check from environment "COB_ON_CYGWIN".
+           if os-check = spaces
+             accept os-check from environment "OS".
            if os-check = spaces
              accept os-check from environment "OS_NAME".
            inspect os-check converting "werfdosin" to "WERFDOSIN".
@@ -5564,7 +5572,9 @@ AT_DATA([prog1.cob], [
            open output file1.
            close file1.
            open input file1.
-           accept os-check from environment "OS".
+           accept os-check from environment "COB_ON_CYGWIN".
+           if os-check = spaces
+             accept os-check from environment "OS".
            if os-check = spaces
              accept os-check from environment "OS_NAME".
            inspect os-check converting "werfdosin" to "WERFDOSIN".
@@ -5921,7 +5931,9 @@ AT_DATA([prog1.cob], [
            open output file1.
            close file1.
            open input file1.
-           accept os-check from environment "OS".
+           accept os-check from environment "COB_ON_CYGWIN".
+           if os-check = spaces
+             accept os-check from environment "OS".
            if os-check = spaces
              accept os-check from environment "OS_NAME".
            inspect os-check converting "werfdosin" to "WERFDOSIN".
@@ -5997,7 +6009,9 @@ AT_DATA([prog1.cob], [
            open output file1.
            close file1.
            open input file1 with lock.
-           accept os-check from environment "OS".
+           accept os-check from environment "COB_ON_CYGWIN".
+           if os-check = spaces
+             accept os-check from environment "OS".
            if os-check = spaces
              accept os-check from environment "OS_NAME".
            inspect os-check converting "werfdosin" to "WERFDOSIN".
@@ -6074,7 +6088,9 @@ AT_DATA([prog1.cob], [
            open output file1.
            close file1.
            open input file1.
-           accept os-check from environment "OS".
+           accept os-check from environment "COB_ON_CYGWIN".
+           if os-check = spaces
+             accept os-check from environment "OS".
            if os-check = spaces
              accept os-check from environment "OS_NAME".
            inspect os-check converting "werfdosin" to "WERFDOSIN".
@@ -6151,7 +6167,9 @@ AT_DATA([prog1.cob], [
            open output file1.
            close file1.
            open input file1.
-           accept os-check from environment "OS".
+           accept os-check from environment "COB_ON_CYGWIN".
+           if os-check = spaces
+             accept os-check from environment "OS".
            if os-check = spaces
              accept os-check from environment "OS_NAME".
            inspect os-check converting "werfdosin" to "WERFDOSIN".
@@ -6232,7 +6250,9 @@ AT_DATA([prog1.cob], [
            open output file1.
            close file1.
            open input file1.
-           accept os-check from environment "OS".
+           accept os-check from environment "COB_ON_CYGWIN".
+           if os-check = spaces
+             accept os-check from environment "OS".
            if os-check = spaces
              accept os-check from environment "OS_NAME".
            inspect os-check converting "werfdosin" to "WERFDOSIN".
@@ -6323,7 +6343,9 @@ AT_DATA([prog1.cob], [
            read file1.
            if fs not = "00"
               display "FAILED 1::r fs=" fs.
-           accept os-check from environment "OS".
+           accept os-check from environment "COB_ON_CYGWIN".
+           if os-check = spaces
+             accept os-check from environment "OS".
            if os-check = spaces
              accept os-check from environment "OS_NAME".
            inspect os-check converting "werfdosin" to "WERFDOSIN".
@@ -6414,7 +6436,9 @@ AT_DATA([prog1.cob], [
            rewrite file1-rec.
            if fs not = "00"
               display "FAILED 1::rw fs=" fs.
-           accept os-check from environment "OS".
+           accept os-check from environment "COB_ON_CYGWIN".
+           if os-check = spaces
+             accept os-check from environment "OS".
            if os-check = spaces
              accept os-check from environment "OS_NAME".
            inspect os-check converting "werfdosin" to "WERFDOSIN".
@@ -6502,7 +6526,9 @@ AT_DATA([prog1.cob], [
            read file1 with lock.
            if fs not = "00"
               display "FAILED 1::r fs=" fs.
-           accept os-check from environment "OS".
+           accept os-check from environment "COB_ON_CYGWIN".
+           if os-check = spaces
+             accept os-check from environment "OS".
            if os-check = spaces
              accept os-check from environment "OS_NAME".
            inspect os-check converting "werfdosin" to "WERFDOSIN".
@@ -12534,9 +12560,13 @@ AT_DATA([prog.cob], [
       *>> fileio-sort currently returns constant length records
              MOVE 1-rsz(ix-1) TO rsz
       *>> END-OF-DETOUR
-             IF (1-rsz(ix-1) <> rsz) or
-                (1-rec(ix-1) <> file2-rec)
-                DISPLAY "FAILED"
+             IF (1-rsz(ix-1) <> rsz)
+                DISPLAY "FAILED Test " ix-1 ": "
+                        1-rsz(ix-1) " <> " rsz
+             END-IF
+             IF (1-rec(ix-1) <> file2-rec)
+                DISPLAY "FAILED Test " ix-1 ": " 
+                        1-rec(ix-1) " <> " file2-rec
              END-IF
           END-PERFORM.
           CLOSE file2.
