@@ -1,4 +1,12 @@
 
+2023-02-06  Simon Sobisch <simonsobisch@gnu.org>
+
+	* atlocal.in, atlocal_valgrind, atlocal_win: do not unset OS
+	  as this is an external var we need to keep for win32
+	* atlocal_valgrind, atlocal_win: added notes for things we
+	  explicit don't want to do
+	* testsuite.src/run_file.at: skip OS recognition on cygwin
+
 2023-01-23 David Declerck <david.declerck@ocamlpro.com>
 
 	* testsuite.src/configuration.at: test reading translation
@@ -1115,7 +1123,7 @@
 	* redef.at, subref.at, runtime.at: New files.
 
 
-Copyright 2002-2022 Free Software Foundation, Inc.
+Copyright 2002-2023 Free Software Foundation, Inc.
 
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.
