@@ -1,4 +1,8 @@
 
+2023-02-06  Simon Sobisch <simonsobisch@gnu.org>
+
+	* pre-inst-env.in: export COB_ON_CYGWIN for testsuite checks
+
 2023-01-18  Simon Sobisch <simonsobisch@gnu.org>
 
 	* bootstrap: use of $TMPDIR instead of /tmp
